Crop with y-true

--- a/attempt.01/02_StampsCrop.ipynb
+++ b/attempt.01/02_StampsCrop.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "02_StampsCrop.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNKIHLQhyAevWEkHLQDNo5a",
+      "authorship_tag": "ABX9TyNYZBd2Jvosy0xIeErmHZ7M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +82,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "xo0cYeKnpYQ8",
-        "outputId": "8b98e67f-d597-4986-f116-ba6b7c71080d",
+        "outputId": "7c497a4c-8150-4220-a26b-ea4afd8b6fca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -97,7 +96,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -121,10 +120,14 @@
         "def cropImage(path_in, item):\n",
         "    \"\"\"\n",
         "    Opens an image from the original dataset, crops it using the labels, \n",
-        "    resize the picture and returns it as a numpy array\n",
+        "    resize the picture and returns it as a numpy array together with its class\n",
         "    \"\"\"\n",
         "    dim = (299, 299)\n",
         "    image_in = path_in+item.label+\"/\"+item.file_name\n",
+        "\n",
+        "    classe = 0 #genuine\n",
+        "    if item.label[0:3]=='cft':\n",
+        "      classe = 1 #fake\n",
         "    \n",
         "    if path.exists(image_in):  \n",
         "        # open image\n",
@@ -136,11 +139,11 @@
         "        # resize image\n",
         "        resized = cv2.resize(crop_img, dim, interpolation = cv2.INTER_AREA)\n",
         "        \n",
-        "        return resized\n",
+        "        return resized, classe\n",
         "    else:\n",
-        "        return None"
+        "        return None, None"
       ],
-      "execution_count": 4,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -182,7 +185,7 @@
         "with open(results_path+\"labels.pkl\",\"rb\") as f:\n",
         "    (df, classes_idx, cant_classes, classes) = pickle.load(f)"
       ],
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -192,19 +195,21 @@
       },
       "source": [
         "stamps = []\n",
+        "y = []\n",
         "for index, row in df.iterrows():\n",
-        "    stamp = cropImage(images_path, row)\n",
+        "    stamp, classe = cropImage(images_path, row)\n",
         "    if not stamp is None:\n",
-        "      stamps.append(stamp)"
+        "      stamps.append(stamp)\n",
+        "      y.append(classe)"
       ],
-      "execution_count": 7,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "SDaoAeqYzmym",
-        "outputId": "21c88d35-baa6-4898-d80a-2ab11362ecc1",
+        "outputId": "1815e680-3b54-49fa-828f-271167156b46",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -212,7 +217,7 @@
       "source": [
         "len(stamps)"
       ],
-      "execution_count": 8,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -224,7 +229,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 17
         }
       ]
     },
@@ -232,16 +237,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "2X-6xAOk7xqf",
-        "outputId": "a6f61e99-3fa1-4426-b4e3-5d6bb301c649",
+        "outputId": "ffa36774-3769-4d4a-cdde-fc2253e0cac8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "stamps_array = np.array(stamps)\n",
+        "y_array = np.array(y)\n",
         "stamps_array.shape"
       ],
-      "execution_count": 9,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -253,7 +259,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 20
         }
       ]
     },
@@ -270,7 +276,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "_y7wj9pC8kDg",
-        "outputId": "0059d1ed-9dd3-49cc-91d1-2b9cd497ab77",
+        "outputId": "6eb5c34f-954e-4ffe-e5d4-90c040ac7305",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 287
@@ -280,19 +286,19 @@
         "from matplotlib import pyplot as plt\n",
         "plt.imshow(stamps_array[0])"
       ],
-      "execution_count": 10,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fb0e4c8c4e0>"
+              "<matplotlib.image.AxesImage at 0x7f003f97e6d8>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 21
         },
         {
           "output_type": "display_data",
@@ -316,9 +322,9 @@
       },
       "source": [
         "with open(results_path + \"stamps_299.pkl\",\"wb\") as f:\n",
-        "    pickle.dump((stamps_array), f)"
+        "    pickle.dump((stamps_array, y_array), f)"
       ],
-      "execution_count": 11,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -330,7 +336,7 @@
         "#### DONE v1 28/10/2020\n",
         "#### Auth: Ariel Ferreiro Diaz"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     }
   ]
