--- a/attempt.01/03_InceptionNet_wAugmentation.ipynb
+++ b/attempt.01/03_InceptionNet_wAugmentation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "03_InceptionNet_NoAugmentation.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOpuhomENSXAq8gLTIcx9/J",
+      "authorship_tag": "ABX9TyN4hYawMx1ygVR4iIyrlmxZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,14 +44,14 @@
         "%autoreload 2\n",
         "%config InlineBackend.figure_format = 'retina'"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "BWSP_pG8327m",
-        "outputId": "93d15723-9f62-467b-b8da-d74c4e85fe8e",
+        "outputId": "872ebbd6-4912-484d-c06a-c35f5a427445",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -60,7 +60,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +99,7 @@
         "import pickle\n",
         "import os"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
         "models_path = 'drive/My Drive/Colab Notebooks/stamps/models/'\n",
         "test_path = 'drive/My Drive/Colab Notebooks/stamps/test/'"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -139,10 +139,198 @@
         "id": "cYlFBTSs4YDR"
       },
       "source": [
-        "with open(results_path+\"stamps_299.pkl\",\"rb\") as f:\n",
-        "    (stamps_df, y) = pickle.load(f)"
+        "with open(results_path+\"stamps_bb_299.pkl\",\"rb\") as f:\n",
+        "    (X, y) = pickle.load(f)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JKk6qj6yoW7i"
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X.astype('float32')/255, y.astype('float32'), test_size=0.2, random_state=42)"
+      ],
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Tjb4Ya5Ron1K",
+        "outputId": "9b90fcca-2ab1-4410-9aed-3aecbf581456",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((1510, 299, 299, 3), (378, 299, 299, 3), (1510,), (378,))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ftjUqB2gop_O"
+      },
+      "source": [
+        "df_train = tf.data.Dataset.from_tensor_slices((X_train, y_train))"
+      ],
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8SjRnoEMpt3y"
+      },
+      "source": [
+        "df_test = tf.data.Dataset.from_tensor_slices((X_test, y_test))"
+      ],
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PWxtL8N8r5ML"
+      },
+      "source": [
+        "i, l = next(iter(df_test.shuffle(30).batch(10)))"
+      ],
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WTW81C2TsMeP",
+        "outputId": "594b8570-587c-449a-b962-9972d45928ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "i.shape, l.shape"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(TensorShape([10, 299, 299, 3]), TensorShape([10]))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ejH7nYuor20v"
+      },
+      "source": [
+        "#### Augmenter"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tUTEzDqL01I8"
+      },
+      "source": [
+        "import imgaug as ia\n",
+        "from imgaug import augmenters as iaa\n",
+        "\n",
+        "def augment(file, n, rotaciones=(-10, 10), \n",
+        "             crops=(0.1, 0.2)):\n",
+        "  \n",
+        "    seq = iaa.Sequential([iaa.Affine(rotate=rotaciones),\n",
+        "                          iaa.Crop(percent=crops),\n",
+        "                          ], random_order=True)\n",
+        "\n",
+        "    img_aug = [seq(image=file) for _ in range(n)]\n",
+        "\n",
+        "    yield np.array(img_aug)"
+      ],
+      "execution_count": 153,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_GcqlG7k4mrW"
+      },
+      "source": [
+        "imagenes = augment(X_train[0], 10)"
+      ],
+      "execution_count": 154,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YU9pdeiMrrs4"
+      },
+      "source": [
+        "import scipy.ndimage as ndimage\n",
+        "\n",
+        "def show(image, label):\n",
+        "  plt.figure()\n",
+        "  plt.imshow(image)\n",
+        "\n",
+        "def random_rotate_image(image):\n",
+        "  image = ndimage.rotate(image, np.random.uniform(-10, 10), reshape=False)\n",
+        "  return image  \n",
+        "\n",
+        "def tf_random_rotate_image(image, label):\n",
+        "  im_shape = image.shape\n",
+        "  [image,] = tf.py_function(random_rotate_image, [image], [tf.float32])\n",
+        "  image.set_shape(im_shape)\n",
+        "  return image, label\n",
+        "\n",
+        "\n",
+        "\n",
+        "ds = tf.data.Dataset.from_generator(\n",
+        "  lambda: img_gen.flow_from_directory(flowers), \n",
+        "  output_types=(tf.float32, tf.float32), \n",
+        "  output_shapes=([32,256,256,3], [32,5])\n",
+        ")\n"
+      ],
+      "execution_count": 71,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rxT3HQFqt5Tu"
+      },
+      "source": [
+        "rot_ds = df_train.map(tf_random_rotate_image)"
+      ],
+      "execution_count": 73,
       "outputs": []
     },
     {
